--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 				</div>
 
 				<div class="row back1" onmouseover="toggleTrayActive('profile')">
-					<div class="col-sm-12">
+					<div class="col-sm-12 main-col">
 						<div class="row section" id="profile-section">
 							<div class="col-sm-6 center" id="profile-picture-div">
 								<div class="profile-picture-sub-div">
@@ -272,7 +272,7 @@
 				</div>
 
 				<div class="row back2" onmouseover="toggleTrayActive('experience')">
-					<div class="col-sm-12">
+					<div class="col-sm-12 main-col">
 						<div class="row section" id="experience-section">
 							<div class="col-sm-12">
 								<div class="row heading">
@@ -638,7 +638,7 @@
 				</div>
 
 				<div class="row back3" onmouseover="toggleTrayActive('projects')">
-					<div class="col-sm-12">
+					<div class="col-sm-12 main-col">
 						<div class="row section" id="projects-section">
 							<div class="col-sm-12">
 								<div class="row heading">
@@ -1041,7 +1041,7 @@
 				</div>
 
 				<div class="row back1" onmouseover="toggleTrayActive('education')">
-					<div class="col-sm-12">
+					<div class="col-sm-12 main-col">
 						<div class="row section" id="education-section">
 							<div class="col-sm-12">
 								<div class="row heading">
@@ -1335,7 +1335,7 @@
 				</div>
 
 				<div class="row back2" onmouseover="toggleTrayActive('contact')">
-					<div class="col-sm-12">
+					<div class="col-sm-12 main-col">
 						<div class="row section" id="contact-section">
 							<div class="col-sm-12">
 								<div class="row heading">
@@ -1344,7 +1344,7 @@
 								<div class="row">
 									<div class="col-sm-9 contact-info font2 Varela">
 										<div class="row">
-											<a href="tel:+919818693448" class="font2">
+											<a href="tel:+919818693448" class="font2 contact-link">
 												<div class="col-sm-12">
 													<i class="fas fa-mobile-alt"></i>
 													&nbsp&nbsp +91 9818-69-3448
