--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
 										<div class="row">
 											<a
 												class="company-link highlight3"
-												href="www.jiit.ac.in"
+												href="http://www.jiit.ac.in/"
 												target="_blank"
 											>
 												<div class="col company-logo-div">
@@ -494,7 +494,7 @@
 										<div class="row">
 											<a
 												class="company-link highlight3"
-												href="www.internity.in"
+												href="http://www.internity.in/"
 												target="_blank"
 											>
 												<div class="col company-logo-div">
@@ -567,7 +567,7 @@
 										<div class="row">
 											<a
 												class="company-link highlight3"
-												href="www.thomso.in"
+												href="https://www.thomso.in/"
 												target="_blank"
 											>
 												<div class="col company-logo-div">
