Added Project Description Setting

--- a/index.html
+++ b/index.html
@@ -646,100 +646,235 @@
 								</div>
 								<div class="row project-sub-div">
 									<div class="center project-logo-div">
-										<a
-											href="https://github.com/FallenSage0614/MLE-Dialect-Analysis"
-											target="_blank"
-										>
+										<div onclick="showDescription(this)">
 											<img class="mx-auto project-logo" src="images/mle.png" />
-										</a>
+											<div id="project-name-data">MLE-Dialect-Analysis</div>
+											<div id="description-data">
+												Machine Translation abbreviated as M.T. is a sub-field
+												of computational linguistics that investigates the use
+												of software to translate text or speech from one
+												language to another. Our application checks for
+												statistics among transalators published around the world
+												by various tech-giants. The algorithm behind the
+												statistics is the key to evalution…
+											</div>
+											<div id="repo-link-data">
+												https://github.com/FallenSage0614/MLE-Dialect-Analysis
+											</div>
+											<div id="website-link-data">
+												https://fallensage0614.github.io/MLE-Dialect-Analysis/
+											</div>
+										</div>
 									</div>
 									<div class="center project-logo-div">
-										<a
-											href="https://github.com/FallenSage0614/Smart-Irrigation-Project"
-											target="_blank"
-										>
+										<div onclick="showDescription(this)">
 											<img
 												class="mx-auto project-logo"
 												src="images/smartirrigation.png"
 											/>
-										</a>
+											<div id="project-name-data">Smart AgroTech</div>
+											<div id="description-data">
+												A full-fledged control panel to remotely control Arduino
+												based smart farm-assistant. The farm assistant regulates
+												the water supply to the farm using prediction about the
+												falling rainfall. It also detects farm damaging animals
+												using the machine learning model and sends a
+												notification to the owner and moderator about the same.
+												It displays the current weather condition for the area
+												and highlights the harmful situations for the crop. It
+												provides remote control over all the farming machinery
+												including water pumps, threshers, lights etc.
+											</div>
+											<div id="repo-link-data">
+												https://github.com/FallenSage0614/Smart-Irrigation-Project
+											</div>
+											<div id="website-link-data">
+												https://fallensage0614.github.io/Smart-Irrigation-Project/
+											</div>
+										</div>
 									</div>
 									<div class="center project-logo-div">
-										<a
-											href="https://github.com/FallenSage0614/Smart-Lens"
-											target="_blank"
-										>
+										<div onclick="showDescription(this)">
 											<img
 												class="mx-auto project-logo"
 												src="images/smartlens.png"
 											/>
-										</a>
+											<div id="project-name-data">Smart Lens</div>
+											<div id="description-data">
+												Arduino based Hardware solution for monitoring
+												notification from your android device. Analogous to
+												google lens, but cost-effective. Receive your phone
+												notifications on your spectacles using the principle of
+												refraction and reflection.
+											</div>
+											<div id="repo-link-data">
+												https://github.com/FallenSage0614/Smart-Lens
+											</div>
+											<div id="website-link-data">#projects-section</div>
+										</div>
 									</div>
 									<div class="center project-logo-div">
-										<a
-											href="https://github.com/FallenSage0614/resourcemanager"
-											target="_blank"
-										>
+										<div onclick="showDescription(this)">
 											<img
 												class="mx-auto project-logo"
 												src="images/database.png"
 											/>
-										</a>
+											<div id="project-name-data">
+												Prasanna Electrotech Resource Manager
+											</div>
+											<div id="description-data">
+												This is a repository under Prasanna Electrotech. A
+												hardware store in Nashik. The website's backend is
+												hosted on heroku. Uses python over gunicorn server
+												environment with flask. Database management resource
+												tool is made using HTML, CSS and Javascript, along with
+												bootstrap and axios framework.
+											</div>
+											<div id="repo-link-data">
+												https://github.com/FallenSage0614/resourcemanager
+											</div>
+											<div id="website-link-data">
+												https://prasannaelectrotech.github.io/resourcemanager/
+											</div>
+										</div>
 									</div>
 									<div class="center project-logo-div">
-										<a
-											href="https://github.com/FallenSage0614/BubbleSort-Visualizer"
-											target="_blank"
-										>
+										<div onclick="showDescription(this)">
 											<img
 												class="mx-auto project-logo"
 												src="images/bubblesort.jpg"
 											/>
-										</a>
+											<div id="project-name-data">Bubble Sort Visualizer</div>
+											<div id="description-data">
+												Bubble sort algorithm visualizer made with HTML, CSS and
+												Javascript. Random input is also available in the UI.
+												Option to control the speed will be added soon.
+											</div>
+											<div id="repo-link-data">
+												https://github.com/FallenSage0614/BubbleSort-Visualizer
+											</div>
+											<div id="website-link-data">
+												https://fallensage0614.github.io/BubbleSort-Visualizer/
+											</div>
+										</div>
 									</div>
 									<div class="center project-logo-div">
-										<a
-											href="https://github.com/FallenSage0614/David-Voice-Assistant"
-											target="_blank"
-										>
+										<div onclick="showDescription(this)">
 											<img
 												class="mx-auto project-logo"
 												src="images/voice-assistant.png"
 											/>
-										</a>
+											<div id="project-name-data">David Voice Assistant</div>
+											<div id="description-data">
+												Developed using Google speech recognition support for
+												python. It controls the basic tasks of sending emails,
+												opening Spotify, searching Google and Youtube for the
+												user, and playing videos, opening URLs using voice
+												commands. Opening basic applications like Code IDE etc.
+											</div>
+											<div id="repo-link-data">
+												https://github.com/FallenSage0614/David-Voice-Assistant
+											</div>
+											<div id="website-link-data">#projects-section</div>
+										</div>
 									</div>
 									<div class="center project-logo-div">
-										<a
-											href="https://github.com/FallenSage0614/Compiler-Design-Project-C-AutoIndentor-and-Summariser"
-											target="_blank"
-										>
+										<div onclick="showDescription(this)">
 											<img
 												class="mx-auto project-logo"
 												src="images/c++summary.png"
 											/>
-										</a>
+											<div id="project-name-data">
+												C++ Auto-Indentor and Summarizer
+											</div>
+											<div id="description-data">
+												Provides automatic indentation to C programs and
+												summarise the code for the number of variables used,
+												types of variables used, number of function calls. Very
+												useful for making documentation of lengthy codes.
+											</div>
+											<div id="repo-link-data">
+												https://github.com/FallenSage0614/Compiler-Design-Project-C-AutoIndentor-and-Summariser
+											</div>
+											<div id="website-link-data">#projects-section</div>
+										</div>
 									</div>
 									<div class="center project-logo-div">
-										<a
-											href="https://github.com/FallenSage0614/Text-In-Image-Encryption-Image-Transfer-over-Server-Client-"
-											target="_blank"
-										>
+										<div onclick="showDescription(this)">
 											<img
 												class="mx-auto project-logo"
 												src="images/serverclient.png"
 											/>
-										</a>
+											<div id="project-name-data">
+												Image encryption using C++
+											</div>
+											<div id="description-data">
+												Made with C++, encrypts messages into images, and sends
+												over local client and server network. Can be used as a
+												local messaging tool among peer devices. The encryption
+												algorithm is time-based and changes with random changes
+												in the key. The encrption is quite secure and
+												damage-proof.
+											</div>
+											<div id="repo-link-data">
+												https://github.com/FallenSage0614/Text-In-Image-Encryption-Image-Transfer-over-Server-Client-
+											</div>
+											<div id="website-link-data">#projects-section</div>
+										</div>
 									</div>
 
 									<div class="center project-logo-div">
-										<a
-											href="https://github.com/FallenSage0614/DelhiMetroRouteApp"
-											target="_blank"
-										>
+										<div onclick="showDescription(this)">
 											<img
 												class="mx-auto project-logo"
 												src="images/delhimetro.png"
 											/>
+											<div id="project-name-data">Delhi Metro Desktop App</div>
+											<div id="description-data">
+												This is a desktop app which will provide a solution to
+												finding the shortest available metro service in
+												Delhi-NCR. It basically works on Djikstra's Shortest
+												path algorithm.
+											</div>
+											<div id="repo-link-data">
+												https://github.com/FallenSage0614/DelhiMetroRouteApp
+											</div>
+											<div id="website-link-data">#projects-section</div>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="row section" id="projects-description-section">
+							<div class="col-sm-12">
+								<div class="row center">
+									<span class="highlight2 Varela heading" id="project-name">
+										Project Name
+									</span>
+								</div>
+								<div class="row center">
+									<span class="highlight3 Varela sub-heading">Description</span>
+								</div>
+								<div
+									class="row project-description-sub-div font2 Varela center"
+									id="project-description-box"
+								></div>
+								<div class="row project-options font2">
+									<div class="col-sm-6 center">
+										<a href="#projects-section" id="repo-link" target="_blank">
+											<button class="noselect font2" id="button-repo"></button
+										></a>
+									</div>
+									<div class="col-sm-6 center">
+										<a
+											href="#projects-section"
+											id="website-link"
+											target="_blank"
+										>
+											<button
+												class="noselect font2"
+												id="button-website"
+											></button>
 										</a>
 									</div>
 								</div>
