Added Project Description Setting

--- a/index.html
+++ b/index.html
@@ -860,7 +860,7 @@
 									id="project-description-box"
 								></div>
 								<div class="row project-options font2 center">
-									<div class="col">
+									<div class="col-sm-6">
 										<a href="#projects-section" id="repo-link" target="_blank">
 											<button
 												class="noselect font2 center"
@@ -868,7 +868,7 @@
 											></button
 										></a>
 									</div>
-									<div class="col">
+									<div class="col-sm-6">
 										<a
 											href="#projects-section"
 											id="website-link"
