Added Project Description Setting

--- a/index.html
+++ b/index.html
@@ -859,16 +859,13 @@
 									class="row project-description-sub-div font2 Varela center"
 									id="project-description-box"
 								></div>
-								<div class="row project-options font2 center">
-									<div class="col-sm-6">
+								<div class="row project-options font2">
+									<div class="col-sm-6 center">
 										<a href="#projects-section" id="repo-link" target="_blank">
-											<button
-												class="noselect font2 center"
-												id="button-repo"
-											></button
-										></a>
+											<button class="noselect font2" id="button-repo"></button>
+										</a>
 									</div>
-									<div class="col-sm-6">
+									<div class="col-sm-6 center">
 										<a
 											href="#projects-section"
 											id="website-link"
