--- a/test.html
+++ b/test.html
@@ -17,7 +17,7 @@
 				height: 50px;
 				cursor: pointer;
 				background: none;
-				border: none;
+				border: 2px green solid;
 			}
 
 			button:before,
