Sliding buttons done

--- a/index.html
+++ b/index.html
@@ -862,7 +862,7 @@
 								<div class="row project-options font2">
 									<div class="col-sm-6 center">
 										<a href="#projects-section" id="repo-link" target="_blank">
-											<button class="noselect font2" id="button-repo"></button>
+											<button class="noselect" id="button-repo"></button>
 										</a>
 									</div>
 									<div class="col-sm-6 center">
@@ -871,10 +871,7 @@
 											id="website-link"
 											target="_blank"
 										>
-											<button
-												class="noselect font2"
-												id="button-website"
-											></button>
+											<button class="noselect" id="button-website"></button>
 										</a>
 									</div>
 								</div>
