--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta content="text/html;charset=utf-8" http-equiv="Content-Type" />
 		<meta content="utf-8" http-equiv="encoding" />
-
+		<link rel="shortcut icon" href="images/avatar.png" type="image/x-icon" />
 		<!-- Jquery -->
 		<script type="text/javascript" src="jquery/jquery.min.js"></script>
 
