--- a/index.html
+++ b/index.html
@@ -267,6 +267,14 @@
 									<img class="mx-auto platform-logo" src="images/blogger.png" />
 								</a>
 							</div>
+							<div class="center platform-logo-div">
+								<a href="https://www.t.me/chitrank_0614" target="_blank">
+									<img
+										class="mx-auto platform-logo"
+										src="images/telegram.png"
+									/>
+								</a>
+							</div>
 						</div>
 					</div>
 				</div>
