--- a/index.html
+++ b/index.html
@@ -869,18 +869,26 @@
 								></div>
 								<div class="row project-options font2">
 									<div class="col-sm-6 center">
-										<a href="#projects-section" id="repo-link" target="_blank">
-											<button class="noselect" id="button-repo"></button>
-										</a>
+										<div class="row center">
+											<a
+												href="#projects-section"
+												id="repo-link"
+												target="_blank"
+											>
+												<button class="noselect" id="button-repo"></button>
+											</a>
+										</div>
 									</div>
-									<div class="col-sm-6 center">
-										<a
-											href="#projects-section"
-											id="website-link"
-											target="_blank"
-										>
-											<button class="noselect" id="button-website"></button>
-										</a>
+									<div class="col-sm-6">
+										<div class="row center">
+											<a
+												href="#projects-section"
+												id="website-link"
+												target="_blank"
+											>
+												<button class="noselect" id="button-website"></button>
+											</a>
+										</div>
 									</div>
 								</div>
 							</div>
