Email Validation added

--- a/index.html
+++ b/index.html
@@ -1575,6 +1575,11 @@
 													></button>
 												</div>
 												<div class="row center">
+													<div class="col-sm-12 error" id="message-error">
+														Fill all the details please.
+													</div>
+												</div>
+												<div class="row center">
 													<div class="col-sm-12" id="message-response"></div>
 												</div>
 											</div>
