Some features commented

--- a/index.html
+++ b/index.html
@@ -221,18 +221,7 @@
 									<img class="mx-auto platform-logo" src="images/github.png" />
 								</a>
 							</div>
-							<div class="center platform-logo-div">
-								<a
-									href="https://www.facebook.com/chitrank.0614/"
-									target="_blank"
-								>
-									<img
-										class="mx-auto platform-logo"
-										src="images/facebook.png"
-									/>
-								</a>
-							</div>
-							<div class="center platform-logo-div">
+							<!-- <div class="center platform-logo-div">
 								<a
 									href="https://www.instagram.com/chitrank_0614/"
 									target="_blank"
@@ -242,7 +231,7 @@
 										src="images/instagram.jpeg"
 									/>
 								</a>
-							</div>
+							</div> -->
 							<div class="center platform-logo-div">
 								<a
 									href="https://www.linkedin.com/in/chitrank0614/"
@@ -256,13 +245,24 @@
 							</div>
 							<div class="center platform-logo-div">
 								<a
+									href="https://www.facebook.com/chitrank.0614/"
+									target="_blank"
+								>
+									<img
+										class="mx-auto platform-logo"
+										src="images/facebook.png"
+									/>
+								</a>
+							</div>
+							<div class="center platform-logo-div">
+								<a
 									href="https://www.quora.com/profile/Chitrank-Mishra"
 									target="_blank"
 								>
 									<img class="mx-auto platform-logo" src="images/quora.png" />
 								</a>
 							</div>
-							<div class="center platform-logo-div">
+							<!-- <div class="center platform-logo-div">
 								<a href="" target="_blank">
 									<img class="mx-auto platform-logo" src="images/blogger.png" />
 								</a>
@@ -274,7 +274,7 @@
 										src="images/telegram.png"
 									/>
 								</a>
-							</div>
+							</div> -->
 						</div>
 					</div>
 				</div>
@@ -1448,7 +1448,7 @@
 										</div> -->
 									</div>
 								</div>
-								<div class="row content-box back2 Varela">
+								<!-- <div class="row content-box back2 Varela">
 									<div class="col-sm-12">
 										<div class="row">
 											<div class="col-sm-10 highlight1">
@@ -1463,7 +1463,7 @@
 												&nbsp&nbsp Winner
 											</div>
 										</div>
-										<!-- <div class="row">
+										<div class="row">
 											<a
 												href=""
 												class="company-link highlight3"
@@ -1474,9 +1474,9 @@
 													&nbsp&nbsp See Certificate
 												</div>
 											</a>
-										</div> -->
+										</div>
 									</div>
-								</div>
+								</div> -->
 							</div>
 						</div>
 					</div>
